# ftxui-plotting

./: CMakeLists.txt
src/: main.cpp  plot.cpp  plot.hpp
